fix weird wrapping

--- a/src/style/Index.css
+++ b/src/style/Index.css
@@ -114,6 +114,9 @@ p > img {
 
 .friend-container {
     margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     width: 80%;
 }
 
